--- a/VFXChallenge.Api/appsettings.json
+++ b/VFXChallenge.Api/appsettings.json
@@ -12,5 +12,9 @@
   },
   "AlphaVantageApi": {
     "APIKey": "H80TCDAKMWTND1RW"
+  },
+  "KafkaSettings":{
+    "ForeignExchangeRateCreatedProducer": "fx-created-producer",
+    "ForeignExchangeRateTopicName": "fx-created-topic"
   }
 }
