--- a/VFXChallenge.Infrastructure/VFXChallenge.Infrastructure.csproj
+++ b/VFXChallenge.Infrastructure/VFXChallenge.Infrastructure.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="AlphaVantage.Net.Forex" Version="2.0.2" />
+      <PackageReference Include="KafkaFlow" Version="2.2.16" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.3">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
